nginx/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: application-ingress 
  annotations:
    kubernetes.io/ingress.class: "nginx" # specify the ingress class
spec:
  ingressClassName: nginx # this is needed also
  rules:
  - http:
      paths:
      - backend:
          service:
            name: frontend
            port:
              number: 80
        path: /greeting
        pathType: Prefix
      - backend:
          service:
            name: backend
            port:
              number: 80
        path: /k8s
        pathType: Prefix
